# velo

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  build.gradle  settings.gradle
doc/: how_to_write_high_coverage_test_cases_for_commands.md  redis_command_support.md  write_better_test_cases_for_ai_agents.md
doc/bug_reviews/: bug_10_types_module_review_round_1.md  bug_10_types_module_review_round_2.md  bug_10_types_module_review_round_3.md  bug_11_persist_layer_review_round_1.md  bug_11_persist_layer_review_round_2.md  bug_12_persist_merge_data_flow_review.md  bug_13_persist_read_data_flow_review.md  bug_13_persist_read_data_flow_review_round_1.md  bug_14_persist_read_data_flow_review_round_2.md  bug_15_persist_truncate_chunk_fd_review_round_1.md  bug_16_persist_data_flow_review_round_3.md  bug_17_persist_read_data_flow_review_round_4.md  bug_18_persist_layer_data_flow_review_round_1.md  bug_19_persist_layer_review_round_1.md  bug_1_xgroup_subcommand.md  bug_20_persist_layer_data_flow_review_round_2.md  bug_21_persist_layer_data_flow_review_round_3.md  bug_22_persist_layer_data_write_flow_review_round_4.md  bug_23_persist_layer_data_write_flow_review_round_5.md  bug_24_configuration_module_review_round_1.md  bug_25_configuration_module_review_round_2.md  bug_26_configuration_module_review_round_3.md  bug_27_acl_security_module_review_round_1.md  bug_27_acl_security_module_review_round_2.md  (+52 more)
doc/lru/: README.md
scripts/: jacoco_cover.py  javadoc_check.py
src/main/c/redis_crc64/: CMakeLists.txt  crc64.c  io_velo_rdb_RedisCrc.h
(+604 files in other folders)
